--- a/danse.css
+++ b/danse.css
@@ -1,5 +1,5 @@
 *{
-    margin :0;
+    margin: 0;
     padding: 0;
 }
 
@@ -14,6 +14,7 @@ h1 {
 .questions {
     color: #fed2d1;
     text-align: center;
+    margin: 20px;
 }
 
 /* navbar */
@@ -137,10 +138,15 @@ h1 {
     font-size: 150%;
 }
 
+h3 {
+    margin: 15px;
+}
+
 .texte{
     max-width: 95%;
     height: auto;
     text-align: justify;
+    margin: 30px;
 }
 
 #autre{
@@ -219,7 +225,7 @@ footer {
 }
 
 .about h3 {
-    margin-bottom: 30px; /* Espacement sous le titre */
+    margin-bottom: 30px;
     font-size: 1.2rem;
     font-weight: bold;
 }
