--- a/Skate.css
+++ b/Skate.css
@@ -116,25 +116,29 @@ body {
     line-height: 1.6;
 }
 
+#PartieImage0 {
+    margin-left: 24px; 
+    margin-top: 24px; 
+}
 
 #titre {    
     font-size: 400%;
     margin-left: 700px;
     position: relative;
     top: -500px;
-    background-color: white;
+    
 }
 
 #sub0 {
     margin-left: 700px;
     position: relative;
-    top: -575px;
-    background-color: white; 
+    top: -500px;
+ 
 }
 
 #line {
     position: relative;
-    top: -265px;
+    top: -112px;
 }
 
 #Global {
@@ -145,7 +149,7 @@ body {
     font-size: 175%;
     position: relative; 
     margin-left: 525px;
-    top: -200px;
+    top: 0px;
 }
 
 .P0 {
@@ -159,6 +163,7 @@ body {
     color: white;
     padding: 10px 0;
 }
+
 
 .main-header .logo {
     text-align: center;
@@ -197,7 +202,9 @@ footer {
     background-color: #D9D9D9;
     padding: 20px 40px;
 }
-
+body.dark.footer {
+    background-color: #222;
+}
 .footer-contenu {
     display: flex;
     align-items: left;
