--- a/style.css
+++ b/style.css
@@ -1,194 +1,657 @@
-/* css Zen Garden default style v1.02 */
-/* css released under Creative Commons License - http://creativecommons.org/licenses/by-nc-sa/1.0/  */
-
-/* This file based on 'Tranquille' by Dave Shea */
-/* You may use this file as a foundation for any new work, but you may find it easier to start from scratch. */
-/* Not all elements are defined in this file, so you'll most likely want to refer to the xhtml as well. */
-
-/* Your images should be linked as if the CSS file sits in the same folder as the images. ie. no paths. */
-
-
-/* basic elements */
-html {
-	margin: 0;
-	padding: 0;
-	}
-body { 
-	font: 75% georgia, sans-serif;
-	line-height: 1.88889;
-	color: #555753; 
-	background: #fff url(http://csszengarden.com/001/blossoms.jpg) no-repeat bottom right; 
-	margin: 0; 
-	padding: 0;
-	}
-p { 
-	margin-top: 0; 
-	text-align: justify;
-	}
-h3 { 
-	font: italic normal 1.4em georgia, sans-serif;
-	letter-spacing: 1px; 
-	margin-bottom: 0; 
-	color: #7D775C;
-	}
-a:link { 
-	font-weight: bold; 
-	text-decoration: none; 
-	color: #B7A5DF;
-	}
-a:visited { 
-	font-weight: bold; 
-	text-decoration: none; 
-	color: #D4CDDC;
-	}
-a:hover, a:focus, a:active { 
-	text-decoration: underline; 
-	color: #9685BA;
-	}
-abbr {
-	border-bottom: none;
-	}
-
-
-/* specific divs */
-.page-wrapper { 
-	background: url(http://csszengarden.com/001/zen-bg.jpg) no-repeat top left; 
-	padding: 0 175px 0 110px;  
-	margin: 0; 
-	position: relative;
-	}
-
-.intro { 
-	min-width: 470px;
-	width: 100%;
-	}
-
-header h1 { 
-	background: transparent url(http://csszengarden.com/001/h1.gif) no-repeat top left;
-	margin-top: 10px;
-	display: block;
-	width: 219px;
-	height: 87px;
-	float: left;
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-header h2 { 
-	background: transparent url(http://csszengarden.com/001/h2.gif) no-repeat top left; 
-	margin-top: 58px; 
-	margin-bottom: 40px; 
-	width: 200px; 
-	height: 18px; 
-	float: right;
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-header {
-	padding-top: 20px;
-	height: 87px;
+* {
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    list-style: none;
 }
 
-.summary {
-	clear: both; 
-	margin: 20px 20px 20px 10px; 
-	width: 160px; 
-	float: left;
-	}
-.summary p {
-	font: italic 1.1em/2.2 georgia; 
-	text-align: center;
-	}
+.navBar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #D9D9D9;
+    color: black;
+    font-family: Arial, sans-serif;
+}
 
-.preamble {
-	clear: right; 
-	padding: 0px 10px 0 10px;
-	}
-.supporting {	
-	padding-left: 10px; 
-	margin-bottom: 40px;
-	}
+.navBar img {
+    height: 10px;
+    width: 10px;
+}
 
-footer { 
-	text-align: center; 
-	}
-footer a:link, footer a:visited { 
-	margin-right: 20px; 
-	}
+.nav-links {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+}
 
-.sidebar {
-	margin-left: 600px; 
-	position: absolute; 
-	top: 0; 
-	right: 0;
-	}
-.sidebar .wrapper { 
-	font: 10px verdana, sans-serif; 
-	background: transparent url(http://csszengarden.com/001/paper-bg.jpg) top left repeat-y; 
-	padding: 10px; 
-	margin-top: 150px; 
-	width: 130px; 
-	}
-.sidebar h3.select { 
-	background: transparent url(http://csszengarden.com/001/h3.gif) no-repeat top left; 
-	margin: 10px 0 5px 0; 
-	width: 97px; 
-	height: 16px; 
+.nav-links ul {
+    display: flex;
+    list-style: none;
+    gap: 20px;
+    margin: 0;
+    padding: 0;
+}
 
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-.sidebar h3.archives { 
-	background: transparent url(http://csszengarden.com/001/h5.gif) no-repeat top left; 
-	margin: 25px 0 5px 0; 
-	width:57px; 
-	height: 14px; 
+.nav-links ul li {
+    position: relative;
+    margin-right: 20px;
+}
 
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-.sidebar h3.resources { 
-	background: transparent url(http://csszengarden.com/001/h6.gif) no-repeat top left; 
-	margin: 25px 0 5px 0; 
-	width:63px; 
-	height: 10px; 
+.nav-links ul li a {
+    text-decoration: none;
+    color: black;
+    font-size: 1.1rem;
+    padding: 10px 15px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    cursor: pointer;
+}
 
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
+.nav-links ul li a:hover {
+    background-color: #a0a0a0;
+}
+
+/* Sous-menu (déroulant) */
+.nav-links ul li.deroulant .sous-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #D9D9D9;
+    padding: 10px 0;
+    border-radius: 5px;
+    border: 1px solid black;
+    z-index: 1000;
+}
+
+.nav-links ul li.deroulant .sous-menu li {
+    margin: 0;
+}
+
+.nav-links ul li.deroulant .sous-menu li a {
+    padding: 10px 20px;
+    display: block;
+    white-space: nowrap;
+}
+
+.nav-links ul li.deroulant .sous-menu li a:hover {
+    background-color: #555;
+}
+
+/* Afficher le sous-menu au survol */
+.nav-links ul li.deroulant:hover .sous-menu {
+    display: block;
+}
+
+/* Bouton Changer Thème */
+.switch-theme {
+    text-decoration: none;
+    color: white;
+    font-size: 1rem;
+    padding: 10px 15px;
+    background-color: #555;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    cursor: pointer;
+}
+
+.switch-theme:hover {
+    background-color: #666;
+}
 
 
-.sidebar ul {
-	margin: 0;
-	padding: 0;
-	}
-.sidebar li {
-	line-height: 1.3em; 
-	background: transparent url(http://csszengarden.com/001/cr1.gif) no-repeat top center; 
-	display: block; 
-	padding-top: 5px; 
-	margin-bottom: 5px;
-	list-style-type: none;
-	}
-.sidebar li a:link {
-	color: #988F5E;
-	}
-.sidebar li a:visited {
-	color: #B3AE94;
-	}
 
 
-.extra1 {
-	background: transparent url(http://csszengarden.com/001/cr2.gif) top left no-repeat; 
-	position: absolute; 
-	top: 40px; 
-	right: 0; 
-	width: 148px; 
-	height: 110px;
-	}
+
+
+
+/* acceuil */
+
+h1 {
+    font-size: 30px;
+    padding: 5px;
+    background-color: #D9D9D9;
+    border: 5px solid #D9D9D9;
+    border-radius: 10px;
+    box-shadow: 8px 8px 4px #5a5a5a;
+    display: flex;
+}
+
+.acceuil {
+    margin: 40px;
+    gap: 100px;
+    display: flex;
+    justify-content: center;
+}
+
+.gauche {
+    width: 600px;
+    height: 750px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 5px solid black;
+    border-radius: 25px;
+}
+
+.droite {
+    align-items: center;
+    flex-direction: column;
+    display: flex;
+    gap: 20px;
+    
+}
+
+.droite img {
+    width: 700px;
+    height: 420px;
+}
+
+.img2 {
+    width: 700px;
+    height: 350px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 5px solid black;
+    border-radius: 25px;
+}
+
+.img3 {
+    width: 700px;
+    height: 350px;
+
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 5px solid black;
+    border-radius: 25px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Sports */
+
+
+.sports {
+    padding: 20px;
+    background-color: #eee;
+}
+
+.sports h2 {
+    width: 60%;
+    margin-top:40px;
+    margin-bottom:40px;
+    text-align: center;
+    font-size: 30px;
+    padding: 5px;
+    background-color: white;
+    border: 5px solid white;
+    border-radius: 10px;
+    box-shadow: 8px 8px 4px #5a5a5a;
+}
+
+.sports-cards {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+
+.card {
+    background-color: #fff;
+    padding: 60px;
+    border-radius: 20px;
+    text-align: center;
+    box-shadow: 8px 8px 4px #5a5a5a;
+    width: 30%;
+    margin-bottom:60px
+}
+
+.card img {
+    width: 100%;
+    border-radius: 8px;
+}
+
+.card h3 {
+    margin: 20px;
+    font-size: 25px;
+}
+
+.card p {
+    font-size: 20px;
+
+}
+
+.card a {
+    display: flex;
+    margin-top: 20px;
+    padding: 10px 15px;
+    background-color: black;
+    color: #fff;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+.card a:hover {
+    background-color: #333;
+    transform: scale(1.04);
+}
+
+
+
+
+/* Avis  */
+
+.avis h2 {
+    width: 60%;
+    margin-top:40px;
+    margin-bottom:40px;
+    text-align: center;
+    font-size: 30px;
+    padding: 5px;
+    background-color: #D9D9D9;
+    border: 5px solid #D9D9D9;
+    border-radius: 10px;
+    box-shadow: 8px 8px 4px #5a5a5a;
+}
+
+.avis {
+    margin-bottom: 100px;
+}
+
+.avis form{
+    margin: 50px auto;
+    padding: 20px;
+    width: 80%;
+    max-width: 900px;
+    background-color: #d9d9d9;
+    border-radius: 10px;
+    box-shadow: 10px 10px 20px black;
+}
+
+form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-group label {
+    font-size: 16px;
+    margin-bottom: 5px;
+    color: #333;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+    font-size: 16px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: white;
+    box-shadow: 2px 2px 8px black;
+    transition: all 0.3s ease;
+}
+
+textarea {
+    resize: none;
+}
+
+/* Effet au focus */
+input[type="text"]:focus,
+input[type="email"]:focus,
+textarea:focus {
+    outline: none;
+    border-color: #555;
+    box-shadow: 0 0 10px black;
+}
+
+/* Bouton */
+button {
+    grid-column: span 2;
+    font-size: 18px;
+    padding: 10px 20px;
+    background-color: black;
+    color: white;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    box-shadow: 2px 2px 8px black;
+    transition: all 0.3s ease;
+}
+
+/* Effet hover pour le bouton */
+button:hover {
+    background-color: #333;
+    transform: scale(1.02);
+}
+
+
+/* Footer */
+
+footer {
+    background-color: #D9D9D9;
+    padding: 20px 40px;
+}
+
+.footer-contenu {
+    display: flex;
+    align-items: left;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 20px;
+    padding-top: 60px;
+    margin-left: 60px;
+    margin-right: 60px;
+}
+
+.about h3 {
+    margin-bottom: 30px; /* Espacement sous le titre */
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+.about ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: left;
+}
+
+.about li {
+    margin: 10px 0;
+}
+
+.social-logo {
+    width: 40px;
+    height: 40px;
+}
+
+.footerbot {
+    border-top: 1px solid black;
+    padding-top: 30px !important;
+    margin-top: 40px;
+    display: flex;
+    flex-direction: row;
+}
+
+.social-links a {
+    margin: 0 10px;
+    transition: transform 0.2s ease;
+}
+
+.social-links a:hover {
+    transform: scale(1.2);
+}
+
+.logo img {
+    max-width: 100px;
+    margin-bottom: 10px;
+}
+.logo p {
+    font-size: 0.9rem;
+    line-height: 1.5;
+    margin: 0;
+    text-align: center;
+}
+
+
+
+
+
+/* Gestion des petits écrans */
+
+@media (max-width: 1200px) {
+    .nav-links ul li a {
+        font-size: 1.2rem;  
+    }
+
+
+    
+    .acceuil {
+        flex-direction: column;
+        gap: 20px;
+        align-items: center;
+    }
+
+    .droite {
+        align-items: center;
+    }
+    .img2,.img3 {
+        border-radius: 15px;
+    }
+}
+
+
+
+
+
+
+@media (max-width: 900px) {
+
+    .nav-links ul li a {
+        font-size: 1.3rem;  
+    }
+
+    .nav-links ul li.deroulant:focus .sous-menu {
+        display: block;
+    }
+
+    /* Section Accueil */
+
+    
+    .acceuil {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .gauche, 
+    .img2, 
+    .img3 {
+        height: auto;
+        border-radius: 15px;
+    }
+
+    h1 {
+        font-size: 40px;
+        text-align: center;
+    }
+
+    /* Section Sports */
+    .sports-cards {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .card {
+        width: 80%;
+        padding: 20px;
+    }
+
+    .card img {
+        height: auto;
+    }
+
+    .card h3 {
+        font-size: 40px;
+    }
+
+    .card p {
+        font-size: 25px;
+    }
+
+    .card a {
+        font-size: 20px;
+    }
+
+    /* Section Avis */
+    form {
+        grid-template-columns: 1fr;
+    }
+
+    .form-group label {
+        font-size: 25px;
+    }
+
+    textarea {
+        font-size: 22px;
+    }
+
+    button {
+        grid-column: span 1;
+    }
+
+}
+
+
+
+/* mode sombre */
+
+body.dark {
+    background-color: #505050;
+}
+
+body.dark .navBar {
+    background-color: #161616;
+    color: black;
+}
+
+body.dark .nav-links ul li a {
+    color: white;
+}
+
+body.dark .nav-links ul li a:hover {
+    background-color: #a0a0a0;
+}
+
+body.dark .nav-links ul li.deroulant .sous-menu {
+    background-color: #161616;
+    border: 1px solid black;
+}
+
+body.dark .nav-links ul li.deroulant .sous-menu li a:hover {
+    background-color: #555;
+}
+
+/* Bouton Changer Thème */
+body.dark .switch-theme {
+    color: white;
+    background-color: #555;
+}
+
+body.dark .switch-theme:hover {
+    background-color: #666;
+}
+
+body.dark h1 {
+    background-color: #161616;
+    border: 5px solid #161616;
+    box-shadow: 8px 8px 4px #5a5a5a;
+    color: white;
+}
+
+body.dark .sports {
+    background-color: #161616;
+}
+
+body.dark .sports h2 {
+    background-color: white;
+    border: 5px solid white;
+    box-shadow: 8px 8px 4px black;
+}
+
+body.dark .card {
+    background-color: white;
+    box-shadow: 8px 8px 4px #5a5a5a;
+}
+
+body.dark .card a {
+    background-color: black;
+    color: white;
+}
+
+body.dark .card a:hover {
+    background-color: #333;
+}
+
+body.dark .avis h2 {
+    color: black;
+    background-color: white;
+    border: 5px solid white;
+    box-shadow: 8px 8px 4px black;
+}
+
+body.dark .avis form{
+    background-color: #161616;
+    box-shadow: 10px 10px 20px black;
+}
+
+body.dark .form-group label {
+    color: white;
+}
+
+body.dark textarea {
+    border: 1px solid #ccc;
+    background-color: white;
+    box-shadow: 2px 2px 8px black;
+}
+
+body.dark textarea:focus {
+    outline: none;
+    border-color: #555;
+    box-shadow: 0 0 10px grey;
+}
+
+body.dark button {
+    background-color: white;
+    color: black;
+    box-shadow: 2px 2px 8px grey;
+}
+
+body.dark button:hover {
+    background-color: #333;
+}
+
+body.dark footer {
+    background-color: #161616;
+}
+
+body.dark footer h3 {
+    color: white;
+}
+
+body.dark footer ul li {
+    color: white;
+}
+
+.footerbot {
+    border-top: 1px solid white;
+}
+
+.social-logo {
+    background-color: white;
+    border-radius: 5px;
+    padding: 5px;
+}
