--- a/Skate.css
+++ b/Skate.css
@@ -116,28 +116,39 @@ body {
     line-height: 1.6;
 }
 
-h1 {
-    font-size: 400%;
-    margin-left: 700px;
-    position: relative;
-    top: -500px;
+.acceuil {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.acceuil h1 {
+    font-size: 50px;
+    display: flex;
 }
 
 #PartieImage0 {
-    margin-left: 24px; 
-    margin-top: 24px; 
+    flex: 1;
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+#PartieImage0 img {
+    width: 80%;
+    max-width: 500px
 }
 
 #sub0 {
-    margin-left: 700px;
-    position: relative;
-    top: -500px;
- 
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 #line {
     position: relative;
-    top: -112px;
 }
 
 #Global {
