--- a/Skate.css
+++ b/Skate.css
@@ -147,8 +147,10 @@ body {
     align-items: center;
 }
 
-#line {
-    position: relative;
+.ligne-separation {
+    border: none;
+    height: 2px;
+    background-color: #333;
 }
 
 #Global {
@@ -230,7 +232,7 @@ footer {
 
 .footer-contenu {
     display: flex;
-    align-items: left;
+    align-items: flex-start;
     flex-wrap: wrap;
     flex-direction: column;
     gap: 20px;
