--- a/danse.css
+++ b/danse.css
@@ -6,13 +6,13 @@
 h1 {
     display: flex;
     height: 200px;
-    color: #fed2d1;
+    color: #ffb8b7;
     justify-content: center;
     align-items: center;
     font-size: 400%;
 }
 .questions {
-    color: #fed2d1;
+    color: #ffb8b7;
     text-align: center;
     margin: 20px;
 }
@@ -23,7 +23,7 @@ h1 {
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    background-color: #fed2d1;
+    background-color: #ffb8b7;
     color: black;
     font-family: Arial, sans-serif;
 }
@@ -67,7 +67,7 @@ h1 {
     position: absolute;
     top: 100%;
     left: 0;
-    background-color: #fed2d1;
+    background-color: #ffb8b7;
     padding: 10px 0;
     border-radius: 5px;
     border: 1px solid black;
@@ -185,14 +185,14 @@ h3 {
     padding: 10px 15px;
     font-size: 14px;
     color: grey;
-    background-color: #fed2d1;
+    background-color: #ffb8b7;
     text-decoration: none;
     border-radius: 5px;
     transition: background-color 0.3s;
 }
 
 .card-button:hover {
-    background-color: #ffbaba;
+    background-color: #ffb8b7;
 }
 
 
@@ -209,7 +209,7 @@ h3 {
     background-image: linear-gradient(to bottom, white,#fed2d1);
 }
 footer {
-    background-color: #fed2d1;
+    background-color: #ffb8b7;
     padding: 20px 40px;
 }
 
